src/webchat-embed/embedded-webchat-styles.css
[data-cognigy-webchat-root] {
    position: fixed;
    z-index: 9999;

    left: 0;
    top: 0;

    width: 100%;
    height: 100%;

    overflow: hidden;
}

[data-cognigy-webchat-root] [data-cognigy-webchat] {
    width: 100%;
    height: 100%;

    z-index: 2;
}


[data-cognigy-webchat-root] button[data-cognigy-webchat-toggle] {
    position: fixed;
    right: 32px;
    bottom: 32px;
    box-shadow: 0 5px 18px 0 rgba(151, 124, 156, 0.2), 0 5px 32px 0 rgba(203, 195, 212, 0.2), 0 8px 58px 0 rgba(216, 212, 221, 0.1);
    z-index: 1;
}

@media screen and (min-width: 576px) {
    [data-cognigy-webchat-root] {
        position: fixed;

        left: initial;
        top: initial;
        bottom: 104px;
        right: 32px;

        overflow: initial;
        width: initial;
        height: initial;
    }

    [data-cognigy-webchat-root] [data-cognigy-webchat] {
        width: 380px;
        height: 580px;
        border-radius: 16px;
        box-shadow: 0 5px 18px 0 rgba(151, 124, 156, 0.2), 0 5px 32px 0 rgba(203, 195, 212, 0.2), 0 8px 58px 0 rgba(216, 212, 221, 0.1);
    }

    [data-cognigy-webchat-root] button[data-cognigy-webchat-toggle] {
        display: block;
    }
}

